--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
       src="https://unpkg.com/react/umd/react.production.min.js"
       crossorigin
     ></script>
-    
-    <title>React App</title>
+
+    <title>vidyuttech</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
